--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header class="header">
     <img class="header__logo link" src="./images/logo.svg" alt="#">
     <ul class="header__links">
-      <li><a href="#" class="link header__lang-link header__lang-link_active">En</a></li>
-      <li><a href="#" class="link header__lang-link">Es</a></li>
+      <li><a href="#" class="link header__lang-link header__lang-link_active" target="_blank">En</a></li>
+      <li><a href="#" class="link header__lang-link" target="_blank">Es</a></li>
     </ul>
   </header>
 
