--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <h2 class="place__title">Erie, PA</h2>
           <div class="place__website">
             <span class="place__url-heading">URL</span>
-            <a class="place__url-heading link" href="https://www.fws.gov/refuge/erie" target="_blank">www.fws.gov</a>
+            <a class="place__link link" href="https://www.fws.gov/refuge/erie" target="_blank">www.fws.gov</a>
           </div>
           <figure class="place__image-item">
             <img class="place__image" src="./images/place-pennsylvania.jpg" alt="#">
