--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </section>
 
     <section class="places">
-      <ul>
-        <li class="place">
+      <div>
+        <div class="place">
           <h2 class="place__title">Maine</h2>
           <div class="place__website">
             <span class="place__url-heading">URL</span>
@@ -88,8 +88,8 @@
               from for your 3-month expedition.</p>
             <p class="place__paragraph">Average cost: $80-100.</p>
           </div>
-        </li>
-        <li class="place">
+        </div>
+        <div class="place">
           <h2 class="place__title">New Hampshire</h2>
           <div class="place__website">
             <span class="place__url-heading">URL</span>
@@ -112,8 +112,8 @@
               are also better than cycling shoes when pitching a tent.</p>
             <p class="place__paragraph">Average cost: $100-150.</p>
           </div>
-        </li>
-        <li class="place">
+        </div>
+        <div class="place">
           <h2 class="place__title">New York</h2>
           <div class="place__website">
             <span class="place__url-heading">URL</span>
@@ -134,8 +134,8 @@
               you see through those
               dark lonely roads on your adventure. Such a light from GE will set you back about $10-20. </p>
           </div>
-        </li>
-        <li class="place">
+        </div>
+        <div class="place">
           <h2 class="place__title">Erie, PA</h2>
           <div class="place__website">
             <span class="place__url-heading">URL</span>
@@ -159,8 +159,8 @@
               have an extra eerie time!</p>
             <p class="place__paragraph">The current cost of a Hershey's Chocolate bar: about 60¢.</p>
           </div>
-        </li>
-        <li class="place">
+        </div>
+        <div class="place">
           <h2 class="place__title">Ohio</h2>
           <div class="place__website">
             <span class="place__url-heading">URL</span>
@@ -182,8 +182,8 @@
               can before continue your bike ride!</p>
             <p class="place__paragraph">The cost of a daily ticket: about $100.</p>
           </div>
-        </li>
-      </ul>
+        </div>
+      </div>
     </section>
 
     <section class="cover">
