--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./pages/index.css">
-  <title> From Portland to Portland</title>
+  <title>From Portland to Portland</title>
 </head>
 
 <body class="page">
@@ -18,7 +18,7 @@
     </ul>
   </header>
 
-  <main class="content">
+  <main>
     <section class="lead">
       <h1 class="lead__title">From Portland to Portland</h1>
       <p class="lead__subtitle">An epic bicycle journey from Portland, ME to Portland, OR</p>
@@ -196,9 +196,9 @@
 
   <footer class="footer">
     <ul class="footer__links">
-      <li><a class="footer__link link" href="https://yandex.com/maps" target="_blank">Maps</a></li>
-      <li><a class="footer__link link" href="https://yandex.com/weather/moscow" target="_blank">Weather</a></li>
-      <li><a class="footer__link link" href="https://calendar.yandex.ru" target="_blank">Calendar</a></li>
+      <li><a class="link footer__link" href="https://yandex.com/maps" target="_blank">Maps</a></li>
+      <li><a class="link footer__link" href="https://yandex.com/weather/moscow" target="_blank">Weather</a></li>
+      <li><a class="link footer__link" href="https://calendar.yandex.ru" target="_blank">Calendar</a></li>
     </ul>
     <p class="footer__copyright">&copy; 2021 Икер Ромеро</p>
   </footer>
