--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           <h2 class="place__title">New Hampshire</h2>
           <div class="place__website">
             <span class="place__url-heading">URL</span>
-            <a class="place__link link" href="https://www.timberland.com/timberlandpro.html"
-              target="_blank">timberland.com</a>
+            <a class="place__link link" href="https://www.timberland.com/timberlandpro.html"" target="
+              _blank">timberland.com</a>
           </div>
           <figure class="place__image-item">
             <img class="place__image" src="./images/place-new-hampshire.jpg" alt="#">
@@ -102,14 +102,13 @@
           <div class="place__description">
             <p class="place__paragraph">There's no better place to lose yourself in nature than in springtime New
               Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less traveled than its
-              neighbors
-              to the South. So enjoy it while it lasts. Fortunately for you, the best outdoor shoe company in the
-              history of the world
+              neighbors to the South. So enjoy it while it lasts.</p>
+            <p class="place__paragraph">You won't be on your bike the whole time, so doesn't it make sense to pick up
+              some extra footwear? Fortunately for you, the best outdoor shoe company in the history of the world
               proudly hails from this state. Cycle by the Timberland headquarters in Stratham, and pick up a pair of
-              rugged, waterproof boots to
-              keep your feet dry. Fitting for unpredictable weather you may be confronted by while passing through the
-              Appalachians. These boots
-              are also better than cycling shoes when pitching a tent.</p>
+              rugged, waterproof boots to keep your feet dry. Fitting for unpredictable weather you may be confronted by
+              while passing through the Appalachians. These boots are also better than cycling shoes when pitching a
+              tent. </p>
             <p class="place__paragraph">Average cost: $100-150.</p>
           </div>
         </div>
@@ -150,7 +149,7 @@
               most
               famously known as the scene of the Gettysburg address delivered by Mr. Lincoln during the Civil war,
               Pennsylvania also has produced
-              a rather decent-sized Amish community (eerie, huh?)</p>
+              a rather decent-sized Amish community (eerie, huh?).</p>
             <p class="place__paragraph">The reason we've brought you here today, if you haven't already guessed, can be
               summed up by using one delicious
               word: chocolate. Hershey's is a Pennsylvania-based company. Most likely, one of the tastiest missions
