--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           <h2 class="place__title">New Hampshire</h2>
           <div class="place__website">
             <span class="place__url-heading">URL</span>
-            <a class="place__link link" href="https://www.timberland.com/timberlandpro.html" target="
-              _blank">timberland.com</a>
+            <a class="place__link link" href="https://www.timberland.com/timberlandpro.html"
+              target="_blank">timberland.com</a>
           </div>
           <figure class="place__image-item">
             <img class="place__image" src="./images/place-new-hampshire.jpg" alt="#">
