--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="page">
 
   <header class="header">
-    <div class="header__logo" alt="The USA"></div>
+    <div class="header__logo"></div>
     <ul class="header__links">
       <li><a href="#" class="header__lang-link header__lang-link_active" target="_blank">En</a></li>
       <li><a href="#" class="header__lang-link" target="_blank">Es</a></li>
@@ -72,9 +72,9 @@
             href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1"
             target="_blank">global.llbean.com</a>
         </div>
-        <figure class="place__image-item">
+        <div class="place__image-item">
           <img class="place__image" src="./images/place-maine.jpg" alt="Maine">
-        </figure>
+        </div>
         <div class="place__description">
           <p class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this is an extraordinary
             and highly underrated state full of rich history and majestic natural beauty. Maine is the main state you
@@ -91,12 +91,12 @@
       <article class="place">
         <h2 class="place__title">New Hampshire</h2>
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">Url</span>
           <a class="place__link" href="https://www.timberland.com/timberlandpro.html" target="_blank">timberland.com</a>
         </div>
-        <figure class="place__image-item">
+        <div class="place__image-item">
           <img class="place__image" src="./images/place-new-hampshire.jpg" alt="New Hampshire">
-        </figure>
+        </div>
         <div class="place__description">
           <p class="place__paragraph">There's no better place to lose yourself in nature than in springtime New
             Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less traveled than its
@@ -113,12 +113,12 @@
       <article class="place">
         <h2 class="place__title">New York</h2>
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">Url</span>
           <a class="place__link" href="https://www.ge.com/about-us" target="_blank">ge.com</a>
         </div>
-        <figure class="place__image-item">
+        <div class="place__image-item">
           <img class="place__image" src="./images/place-new-york.jpg" alt="New York">
-        </figure>
+        </div>
         <div class="place__description">
           <p class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also has several other
             reasons for going down in
@@ -135,12 +135,12 @@
       <article class="place">
         <h2 class="place__title">Erie, PA</h2>
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">Url</span>
           <a class="place__link" href="https://www.fws.gov/refuge/erie" target="_blank">www.fws.gov</a>
         </div>
-        <figure class="place__image-item">
+        <div class="place__image-item">
           <img class="place__image" src="./images/place-pennsylvania.jpg" alt="Pennsylvania">
-        </figure>
+        </div>
         <div class="place__description">
           <p class="place__paragraph">Erie, Pennsylvania, not to be confused with the word “eerie,” although it can be
             from time to time, is another town worth passing through for several different reasons. While it might be
@@ -160,12 +160,12 @@
       <article class="place">
         <h2 class="place__title">Ohio</h2>
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">Url</span>
           <a class="place__link" href="https://www.cedarpoint.com" target="_blank">cedarpoint.com</a>
         </div>
-        <figure class="place__image-item">
+        <div class="place__image-item">
           <img class="place__image" src="./images/place-ohio.jpg" alt="Ohio">
-        </figure>
+        </div>
         <div class="place__description">
           <p class="place__paragraph">From the college capital of Columbus to the clean coastline of Cleveland, Ohio
             is a truly hidden gem.
